<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/stock_listItem"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal" >

    <TextView
        android:id="@+id/titlename"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center_horizontal"
        android:text="@string/stock_name_title"
        android:textColor="#ffffff" >
    </TextView>

    <TextView
        android:id="@+id/stock_now_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center_horizontal"
        android:text="@string/stock_now_title"
        android:textColor="#ffffff" >
    </TextView>

    <TextView
        android:id="@+id/stock_yesprice_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center_horizontal"
        android:text="@string/stock_increase_title"
        android:textColor="#ffffff" >
    </TextView>

    <TextView
        android:id="@+id/stock_toprice_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center_horizontal"
        android:text="@string/stock_increase_percent_title"
        android:textColor="#ffffff" >
    </TextView>

</LinearLayout>