<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <ImageView
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:layout_margin="4dp"
        android:background="#ffffff" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/backBtn"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_gravity="left"
                android:background="@drawable/back_btn_click" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal|center_vertical"
            android:layout_weight="9"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/titleTextview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal|center_vertical" >
            </TextView>
        </LinearLayout>
    </LinearLayout>

    <ImageView
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:layout_margin="4dp"
        android:background="#ffffff" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="left"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/nowpriceText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal|center_vertical"
            android:layout_weight="1"
            android:paddingLeft="4dp"
            android:text="@string/nowpriceText" >
        </TextView>

        <TextView
            android:id="@+id/nowpriceValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal|center_vertical"
            android:layout_weight="1"
            android:paddingLeft="4dp" >
        </TextView>

        <TextView
            android:id="@+id/stock_increaseText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal|center_vertical"
            android:layout_weight="1"
            android:paddingLeft="10dp"
            android:text="@string/stock_increaseText" >
        </TextView>

        <TextView
            android:id="@+id/stock_increaseValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal|center_vertical"
            android:layout_weight="1"
            android:paddingLeft="4dp" >
        </TextView>

        <TextView
            android:id="@+id/stock_increase_percentText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal|center_vertical"
            android:layout_weight="1"
            android:paddingLeft="10dp"
            android:text="@string/stock_increase_percentText" >
        </TextView>

        <TextView
            android:id="@+id/stock_increase_percentValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal|center_vertical"
            android:layout_weight="1"
            android:paddingLeft="4dp" >
        </TextView>
    </LinearLayout>

    <ImageView
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:layout_margin="4dp"
        android:background="#ffffff" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="left"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/todayOpenPriceText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal|center_vertical"
            android:layout_weight="1"
            android:paddingLeft="4dp"
            android:text="@string/todaypriceText" >
        </TextView>

        <TextView
            android:id="@+id/todayOpenPriceValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal|center_vertical"
            android:layout_weight="1"
            android:paddingLeft="4dp" >
        </TextView>

        <TextView
            android:id="@+id/highestPriceText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal|center_vertical"
            android:layout_weight="1"
            android:paddingLeft="10dp"
            android:text="@string/highestPriceText" >
        </TextView>

        <TextView
            android:id="@+id/highestPriceValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal|center_vertical"
            android:layout_weight="1"
            android:paddingLeft="4dp" >
        </TextView>

        <TextView
            android:id="@+id/lowestPriceText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal|center_vertical"
            android:layout_weight="1"
            android:paddingLeft="10dp"
            android:text="@string/lowestPriceText" >
        </TextView>

        <TextView
            android:id="@+id/lowestPriceValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal|center_vertical"
            android:layout_weight="1"
            android:paddingLeft="4dp" >
        </TextView>
    </LinearLayout>

    <ImageView
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:layout_margin="4dp"
        android:background="#ffffff" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="left"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/tradeCountText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal|center_vertical"
            android:layout_weight="1"
            android:paddingLeft="4dp"
            android:text="@string/tradeCountText" >
        </TextView>

        <TextView
            android:id="@+id/tradeCountValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal|center_vertical"
            android:layout_weight="1"
            android:paddingLeft="4dp"
            android:text="10.2" >
        </TextView>

        <TextView
            android:id="@+id/tradeMoneyText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal|center_vertical"
            android:layout_weight="1"
            android:paddingLeft="4dp"
            android:text="@string/tradeMoneyText" >
        </TextView>

        <TextView
            android:id="@+id/tradeMoneyValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal|center_vertical"
            android:layout_weight="1"
            android:paddingLeft="4dp" >
        </TextView>
<!-- 
        <TextView
            android:id="@+id/yestodayOverPriceText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal|center_vertical"
            android:layout_weight="1"
            android:paddingLeft="4dp"
            android:text="@string/yestodayPriceText" >
        </TextView>

        <TextView
            android:id="@+id/yestodayOverPriceValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal|center_vertical"
            android:layout_weight="1"
            android:paddingLeft="4dp" >
        </TextView>
         -->
    </LinearLayout>

    <ImageView
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:layout_margin="4dp"
        android:background="#ffffff" />

    <TextView
        android:id="@+id/wholePointPrice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:padding="4dp"
        android:text="@string/wholePointPrice" />
    
    
    <!--  
        <TabHost
        android:id="@android:id/tabhost"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TabWidget
                android:id="@android:id/tabs"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1" >
            </TabWidget>

            <FrameLayout
                android:id="@android:id/tabcontent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="9" >
            </FrameLayout>
        </LinearLayout>
    </TabHost>
    -->
 
    <ListView
        android:id="@+id/listview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >
    </ListView>


</LinearLayout>