<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#333333"
    android:orientation="vertical"
    android:padding="4dp"
    tools:context="${relativePackage}.${activityClass}" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.33"
            android:gravity="center"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/stock_sh_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/stock_sh_name"
                android:textColor="#ffffff" />

            <TextView
                android:id="@+id/stock_sh_index"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/stock_sh_change"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="12sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.33"
            android:gravity="center"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/stock_sz_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/stock_sz_name"
                android:textColor="#ffffff" />

            <TextView
                android:id="@+id/stock_sz_index"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/stock_sz_change"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="12sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.33"
            android:gravity="center"
            android:orientation="vertical" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/stock_chuang_name"
                android:textColor="#ffffff" />

            <TextView
                android:id="@+id/stock_chuang_index"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/stock_chuang_change"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="12sp" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <AutoCompleteTextView
            android:id="@+id/editText_stockId"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:completionHint="请输入股票代码或简称"
            android:completionThreshold="1"
            android:dropDownHorizontalOffset="20dp"
            android:maxLength="9"
            android:textColor="#ff0000"
             />

    </LinearLayout>

    <include
        android:id="@+id/list_title"
        layout="@layout/stock_itemtitles" />

    <ScrollView
        android:id="@+id/scrollview1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <ListView
                android:id="@+id/listview"
                android:layout_width="fill_parent"
                android:layout_height="400dp" >
            </ListView>

            <ImageView
                android:id="@+id/stockimg"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:scaleType="center" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>